@@ -1,3 +1,8 @@
+2009-01-19  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Win_GParted.cc: Reworded message when applying operations.
+	  - Closes GParted bug #564952
+
 2009-01-13  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Win_GParted.cc: Removed space between menu entry and periods.
@@ -23,7 +28,7 @@
 	  - In a recent upgrade to eclipse 3.4.0, I did not realize that
 	    the default save option was to remove trailing whitespace, and
 	    ensure newline at end of file.  This resulted in way too many
-	    difference showing up in the file.
+	    differences showing up in the file.
 
 2009-01-03  Curtis Gedak  <gedakc@gmail.com>
 
